--- a/package.json
+++ b/package.json
@@ -30,9 +30,10 @@
     "vue-ls": "^3.2.1",
     "vue-quill-editor": "^3.0.6",
     "vue-router": "^3.1.2",
+    "vue-svg-component-runtime": "^1.0.1",
     "vuex": "^3.1.1",
     "wangeditor": "^3.1.1",
-    "vue-svg-component-runtime": "^1.0.1"
+    "xlsx": "^0.15.5"
   },
   "devDependencies": {
     "@ant-design/colors": "^3.2.1",
